fix: apply `scrollbar-gutter: stable` to prevent layout shift with modals
resolves #2514

--- a/packages/starlight/style/reset.css
+++ b/packages/starlight/style/reset.css
@@ -11,6 +11,7 @@
 html {
 	color-scheme: dark;
 	accent-color: var(--sl-color-accent);
+	scrollbar-gutter: stable;
 }
 
 html[data-theme='light'] {
